Adopt immutable-collection factory methods and Stream.toList()