@@ -4,7 +4,6 @@ import freemind.model.MindMapNode;
 import freemind.modes.common.plugins.ReminderHookBase;
 import freemind.modes.mindmapmode.hooks.MindMapNodeHookAdapter;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class RemoveReminderHook extends MindMapNodeHookAdapter {
@@ -17,7 +16,7 @@ public class RemoveReminderHook extends MindMapNodeHookAdapter {
         super.invoke(node);
         ReminderHookBase hook = TimeManagementOrganizer.getHook(node);
         if (hook != null) {
-            List<MindMapNode> selected = Arrays.asList(node);
+            List<MindMapNode> selected = List.of(node);
             // adding the hook the second time, it is removed.
             getMindMapController().addHook(node, selected, TimeManagement.REMINDER_HOOK_NAME, null);
         }
